# resolvata

./: .gitignore  README.md  setup.cfg  setup.py
src/: resolvata.py
src/resolvata/: __init__.py  _abc.py  _local.py
