[metadata]
name = resolvata
version = 0.1.0a0.dev0
license = MIT
license_file = LICENSE
url = https://github.com/EpicWink/resolvata
project_urls =
    Source = https://github.com/EpicWink/resolvata
    Tracker = https://github.com/EpicWink/resolvata/issues
author = Laurie O
author_email = laurie_opperman@hotmail.com
description = Related data asset path resolving
long_description = file: README.md
long_description_content_type = text/markdown
keywords = resolve
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Natural Language :: English

[options]
py_modules = resolvata
package_dir =
    =src
